web spacing has been fix

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
   padding: 0px;
   font-family: sans-serif, "Times New Roman";
   overflow-x: hidden;
-  /* position: relative; */
 }
 
 nav {
@@ -22,16 +21,9 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  z-index: 9999;
 }
-/* .navColor {
-  background: rgba(150, 150, 150, 0.192);
-  height: 7vh;
-  background-color: transparent;
-  backdrop-filter: blur(10px);
-}
-.navColor .links a {
-  color: black;
-} */
+
 /*mmmmmmmmmmmmmmm links  styling mmmmmmmmmmmmmmmmmm */
 .links {
   list-style-type: none;
@@ -77,7 +69,6 @@ nav {
   /*mmmmmmmmmmmmmmmmmmmmm navbar styling for the page mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm*/
 
   .navs {
-    z-index: 9999;
     display: flex;
     justify-content: space-between;
     position: absolute;
@@ -133,11 +124,13 @@ nav {
   .take .line3 {
     transform: translate(0, -11px) rotate(45deg);
   }
+  /* hero part */
+  #start {
+    transform: translate(-10%);
+    left: 6% !important;
+  }
 }
 
-.body-top {
-  padding-top: 5%;
-}
 /* forms */
 .center {
   display: flex;
@@ -165,4 +158,25 @@ label {
   padding: 0 15px;
   background-color: rgb(238, 89, 89);
   color: white;
+}
+
+.top {
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+    url("assets/j.jpg");
+  width: 100%;
+  height: 70vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* card shadow */
+.card:hover {
+  transition: all ease-out 0.5s;
+  box-shadow: 60px -16px teal;
+  transform: translateY(3px);
+}
+
+/* hero part */
+#start {
+  padding-left: 16% !important;
 }
